--- a/packages/add/package.json
+++ b/packages/add/package.json
@@ -8,5 +8,6 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "gitHead": "c089a93469b690190ffe6e8e122447507d11e217"
 }
