--- a/packages/calculator/package.json
+++ b/packages/calculator/package.json
@@ -14,5 +14,6 @@
     "div": "^1.2.0",
     "mul": "^1.2.0",
     "sub": "^1.2.0"
-  }
+  },
+  "gitHead": "c089a93469b690190ffe6e8e122447507d11e217"
 }
