--- a/packages/sub/package.json
+++ b/packages/sub/package.json
@@ -8,5 +8,6 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "gitHead": "525059d6c181359fbe32270c659f3aabd677f954"
 }
