--- a/packages/div/package.json
+++ b/packages/div/package.json
@@ -9,5 +9,6 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "gitHead": "525059d6c181359fbe32270c659f3aabd677f954"
+  "private": false,
+  "gitHead": "39b45f98920c74d777e044f2f769d0c34ccfa2f5"
 }
