--- a/packages/mul/package.json
+++ b/packages/mul/package.json
@@ -8,6 +8,7 @@
   },
   "keywords": [],
   "author": "",
+  "private": false,
   "license": "ISC",
-  "gitHead": "525059d6c181359fbe32270c659f3aabd677f954"
+  "gitHead": "39b45f98920c74d777e044f2f769d0c34ccfa2f5"
 }
