--- a/packages/add/package.json
+++ b/packages/add/package.json
@@ -3,11 +3,12 @@
   "version": "2.0.1",
   "description": "",
   "main": "index.js",
+  "private": false,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "gitHead": "525059d6c181359fbe32270c659f3aabd677f954"
+  "gitHead": "39b45f98920c74d777e044f2f769d0c34ccfa2f5"
 }
