--- a/packages/add/package.json
+++ b/packages/add/package.json
@@ -9,6 +9,5 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
-  "gitHead": "39b45f98920c74d777e044f2f769d0c34ccfa2f5"
+  "license": "ISC"
 }
