--- a/packages/calculator/package.json
+++ b/packages/calculator/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vinraiwip/calculator",
-  "version": "2.0.3",
+  "version": "2.0.4",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -13,8 +13,8 @@
   "dependencies": {
     "@vinraiwip/add": "^2.0.3",
     "@vinraiwip/div": "^2.0.3",
-    "@vinraiwip/mul": "2.0.3",
-    "@vinraiwip/sub": "^2.0.4"
+    "@vinraiwip/mul": "^2.0.4",
+    "@vinraiwip/sub": "^2.0.5"
   },
   "gitHead": "3fa1f77882f3ace6d8681cdecabb48f5281b6051"
 }
